--- a/paper/sections/02-introduction.tex
+++ b/paper/sections/02-introduction.tex
@@ -28,7 +28,7 @@ Despite compelling evidence for their effectiveness \cite{dangelo2014simulations
 
 Recent advances in generative artificial intelligence present unprecedented opportunities to address these barriers. Large language models like GPT-4 and Claude have demonstrated remarkable capabilities in generating functional code from natural language descriptions. However, successfully applying AI to educational simulation development requires more than raw generative capability—it requires carefully designed frameworks, standardized patterns, and best-practice guidelines that AI systems can reliably implement.
 
-This paper introduces \textit{MicroSims}: a comprehensive framework for creating lightweight, interactive educational simulations that occupy a unique position at the intersection of three key characteristics:
+This paper introduces \textit{MicroSims}: a comprehensive framework for creating lightweight, interactive educational simulations that occupy a unique position at the intersection of three key characteristics (Figure~\ref{fig:uniqueness}):
 
 \begin{enumerate}
 \item \textbf{Simplicity}: Focused simulations with clear parameters, constrained scope, and transparent code that is tractable for AI generation and human modification
