--- a/paper/sections/04-definition.tex
+++ b/paper/sections/04-definition.tex
@@ -5,6 +5,13 @@
 
 We define an \textit{Educational MicroSim} as a lightweight, standalone interactive simulation that executes within standard web browsers and is specifically designed for pedagogical applications. Educational MicroSims are characterized by their focused scope, browser-native implementation, and compatibility with generative AI systems. They occupy a unique position at the intersection of simplicity, accessibility, and AI-generation capability, providing an optimal balance of interactivity and pedagogical effectiveness.
 
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.6\textwidth]{figures/microsim-uniqueness.png}
+\caption{MicroSims occupy a unique position at the intersection of three critical characteristics: Simplicity (lightweight, focused scope), Accessibility (browser-based, universal embedding), and AI Generation (standardized patterns, prompt-compatible). This convergence of attributes distinguishes MicroSims from other educational technology approaches and enables their scalable deployment across diverse learning contexts.}
+\label{fig:uniqueness}
+\end{figure}
+
 \subsection{Core Characteristics}
 
 \textbf{Focused Scope}: MicroSims deliberately constrain their focus to specific learning objectives rather than attempting comprehensive coverage of broad subject domains.
