--- a/paper/sections/09-expected-benefits.tex
+++ b/paper/sections/09-expected-benefits.tex
@@ -15,7 +15,14 @@ Studies consistently report that students using interactive simulations exhibit 
 \item 4x longer retention of learned concepts
 \end{itemize}
 
-These impressive gains reflect simulations' ability to make abstract concepts tangible and provide immediate, interactive feedback that supports active learning. By allowing learners to \textit{visualize invisible processes} such as magnetic fields, molecular motions, or electric currents, simulations bridge the gap between theoretical knowledge and real-world phenomena \cite{phet2023}.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.95\textwidth]{figures/effectiveness-chart.png}
+\caption{Learning effectiveness of interactive simulations compared to traditional instruction across three key outcome measures. Data represent meta-analysis findings from multiple studies including PhET Interactive Simulations research and systematic reviews across STEM disciplines. Error bars indicate reported ranges of improvement. Sources: Wieman et al. (2008), Adams et al. (2008), D'Angelo et al. (2014), Rutten et al. (2012), Smetana \& Bell (2012).}
+\label{fig:effectiveness}
+\end{figure}
+
+These impressive gains, visualized in Figure~\ref{fig:effectiveness}, reflect simulations' ability to make abstract concepts tangible and provide immediate, interactive feedback that supports active learning. By allowing learners to \textit{visualize invisible processes} such as magnetic fields, molecular motions, or electric currents, simulations bridge the gap between theoretical knowledge and real-world phenomena \cite{phet2023}.
 
 \subsection{PhET Interactive Simulations: Evidence at Scale}
 
