--- a/paper/sections/04-definition.tex
+++ b/paper/sections/04-definition.tex
@@ -28,6 +28,15 @@ We define an \textit{Educational MicroSim} as a lightweight, standalone interact
 
 MicroSims are implemented as self-contained web applications, typically using JavaScript frameworks such as p5.js, that require no external dependencies or server-side infrastructure. They follow a standardized width-responsive design pattern with distinct regions for visualization (drawing area) and user controls (interaction area). The layout of MicroSims can be expressed in rules files that are used by generative AI systems to ensure consistent implementation patterns across different simulations.
 
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.6\textwidth]{figures/microsim-layout.png}
+\caption{MicroSims use a standardized layout pattern with distinct areas for visualization and user controls. This consistent structure facilitates generative AI creation and modification of MicroSims while ensuring usability across diverse educational contexts.  This layout consistency also allows interactivity to be logged in a standardized way for integration with intelligent textbooks and learning analytics systems.}
+\label{fig:layout}
+\end{figure}
+
+
+
 Being browser-based and dependency-free, MicroSims can be easily distributed, embedded in various learning management systems, and accessed across different devices and platforms without installation requirements. The goal is to allow a MicroSim to be placed on any web page using a single HTML \texttt{iframe} element.
 
 \subsection{Educational Purpose and Learning Objectives}
