--- a/paper/sections/07-metadata.tex
+++ b/paper/sections/07-metadata.tex
@@ -7,7 +7,7 @@ This section presents a comprehensive metadata framework specifically designed f
 
 \subsection{Search and Reuse: The Foundation of Educational Resource Discovery}
 
-The fundamental principle underlying effective educational resource management is simple yet critical: educators cannot reuse what they cannot find. Traditional educational resource repositories often suffer from inconsistent cataloging practices, making it difficult for educators to locate materials that match their specific needs. A mathematics teacher seeking a simulation for teaching quadratic functions might struggle to locate appropriate resources among thousands of available options, particularly when materials are tagged inconsistively or lack detailed descriptions of their educational purpose, technical requirements, or pedagogical applications.
+The fundamental principle underlying effective educational resource management is simple yet critical: educators cannot reuse what they cannot find. Traditional educational resource repositories often suffer from inconsistent cataloging practices, making it difficult for educators to locate materials that match their specific needs. A mathematics teacher seeking a simulation for teaching quadratic functions might struggle to locate appropriate resources among thousands of available options, particularly when materials are tagged inconsistently or lack detailed descriptions of their educational purpose, technical requirements, or pedagogical applications.
 
 The proliferation of AI-generated educational content exacerbates this challenge. While artificial intelligence can rapidly create customized learning materials, these resources require systematic organization to be truly useful at scale. Without standardized metadata, even the most sophisticated educational simulation becomes effectively invisible to educators who could benefit from its use. The power of generative AI in creating educational content can only be fully realized when paired with comprehensive metadata frameworks that enable discovery and integration.
 
